<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.gautsch.myapplication.EditTextPreferenceWithValue
        android:key="@string/settings_host"
        android:title="@string/title_edittext_host"
        />
    <com.gautsch.myapplication.EditTextPreferenceWithValue
        android:key="@string/settings_username"
        android:title="@string/title_edittext_username"
        />
    <EditTextPreference
        android:inputType="textPassword"
        android:key="@string/settings_password"
        android:title="@string/title_edittext_password"
        />
    <com.gautsch.myapplication.EditTextPreferenceWithValue
        android:key="@string/settings_deviceId"
        android:title="@string/title_edittext_deviceId"
        />

    <com.gautsch.myapplication.EditTextPreferenceWithSpinner
        android:key="@string/settings_androidSensorId"
        android:title="@string/title_edittext_androidSensorId"
        />
    <com.gautsch.myapplication.EditTextPreferenceWithValue
        android:key="@string/settings_transmitInterval"
        android:title="@string/title_edittext_transmitInterval" />

    <com.gautsch.myapplication.EditTextPreferenceWithValue
        android:key="@string/settings_filterByPrefix"
        android:title="@string/title_edittext_filter_by_prefix" />

</PreferenceScreen>

